--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,9 +3,9 @@
 	"image": "mcr.microsoft.com/devcontainers/typescript-node:22",
 	"features": {
 		"ghcr.io/anthropics/devcontainer-features/claude-code:1": {},
-		"dotnet": {
-			"version": "latest",
-			"runtimeOnly": false
+		"ghcr.io/devcontainers/features/dotnet:2": {
+			"version": "8.0",
+			"installUsingApt": true
 		}
 	},
 	"postCreateCommand": "npm install",
