--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,35 +1,36 @@
 {
-	"name": "Quick React Webresource Creator",
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:22",
-	"features": {
-		"ghcr.io/anthropics/devcontainer-features/claude-code:1": {},
-		"ghcr.io/devcontainers/features/dotnet:2": {
-			"version": "8.0",
-			"installUsingApt": true
-		}
-	},
-	"postCreateCommand": "npm install",
-	"forwardPorts": [5173],
-	"portsAttributes": {
-		"5173": {
-			"label": "Vite Dev Server",
-			"onAutoForward": "openPreview"
-		}
-	},
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"bradlc.vscode-tailwindcss",
-				"esbenp.prettier-vscode",
-				"ms-vscode.vscode-typescript-next",
-				"ms-vscode.vscode-eslint"
-			],
-			"settings": {
-				"editor.formatOnSave": true,
-				"editor.defaultFormatter": "esbenp.prettier-vscode",
-				"terminal.integrated.defaultProfile.linux": "bash"
-			}
-		}
-	},
-	"remoteUser": "node"
+  "name": "Quick React Webresource Creator",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:22",
+  "features": {
+    "ghcr.io/anthropics/devcontainer-features/claude-code:1": {},
+    "ghcr.io/devcontainers/features/dotnet:2": {
+      "version": "8.0",
+      "installUsingApt": true
+    }
+  },
+  "postCreateCommand": "npm install && dotnet tool install --global Microsoft.PowerPlatform.Dataverse.MCP",
+  "forwardPorts": [5173],
+  "portsAttributes": {
+    "5173": {
+      "label": "Vite Dev Server",
+      "onAutoForward": "openPreview"
+    }
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "bradlc.vscode-tailwindcss",
+        "esbenp.prettier-vscode",
+        "ms-vscode.vscode-typescript-next",
+        "ms-vscode.vscode-eslint",
+        "modelcontextprotocol.mcp"
+      ],
+      "settings": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "terminal.integrated.defaultProfile.linux": "bash"
+      }
+    }
+  },
+  "remoteUser": "node"
 }
